# weather

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci-cd.yml
weather-cli/: Cargo.toml
weather-cli/src/common/: config.rs  error.rs  logging.rs  mod.rs  state.rs
weather-cli/src/handlers/: alias.rs  mod.rs  provider.rs  weather.rs
weather-cli/src/models/: args.rs  config.rs
weather-cli/tests/: cli_tests.rs
weather-providers/: Cargo.toml  build.rs
weather-providers/src/common/: mod.rs
weather-providers/src/models/: mod.rs  open_weather.rs
weather-providers/src/providers/: mock.rs  mod.rs  open_weather.rs  weather_api.rs
weather-providers/tests/: lib_tests.rs
weather_cli/: Cargo.toml
weather_cli/benches/: provider_bench.rs
weather_cli/src/: main.rs
weather_cli/src/common/: logging.rs  state.rs
weather_cli/src/handlers/: mod.rs  provider.rs  weather.rs
weather_cli/src/models/: config.rs
weather_cli/tests/: cli_tests.rs
weather_providers/: Cargo.toml
weather_providers/proto/: weather.proto
weather_providers/src/: lib.rs
weather_providers/src/common/: error.rs
weather_providers/src/models/: open_weather.rs  weather_api.rs
weather_providers/src/providers/: grpc_mock.rs  open_weather.rs  weather_api.rs
weather_providers/src/utils/: date.rs
