[workspace]
resolver = "3"
members = ["weather-cli", "weather-providers"]
default-members = ["weather-cli"]

[workspace.package]
edition = "2024"
version = "0.1.3"
description = "An awesome weather app."
keywords = ["Rust", "Weather"]
authors = ["Anatolii Shliakhto <a.shlyakhto@gmail.com>"]
repository = "https://github.com/AnatoliiShliakhto/weather"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
async-trait = { version = "0.1.89" }
chrono = { version = "0.4.42" }
clap = { version = "4.5.53", features = ["derive"] }
dirs = { version = "6.0.0" }
protoc-bin-vendored = { version = "3.2.0" }
prost = { version = "0.14.1" }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
thiserror = {  version = "2.0.17" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "rt", "macros"] }
tonic = { version = "0.14.2" }
tonic-prost = {  version = "0.14.2" }
tonic-prost-build = { version = "0.14.2" }
tracing = { version = "0.1.43" }
tracing-appender = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

assert_cmd = "2.1.1"
predicates = "3.1.3"
#tempfile = "3.23.0"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
