[package]
name = "weather-cli"
edition.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

weather-providers = { path = "../weather-providers" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

#[[bin]]
#name = "weather"
#path = "src/main.rs"