[package]
name = "weather_cli"
edition.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

weather_providers = { path = "../weather_providers" }

[dev-dependencies]
criterion.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[[bench]]
name = "provider_bench"
harness = false

[[bin]]
name = "weather"
path = "src/main.rs"